Implement Create a new site functionality
